--- a/scss/rps/_responsive.scss
+++ b/scss/rps/_responsive.scss
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 1500px) {
+    .wrap-unlimited {
+        display: none !important;
+    }
+}
+
 @media only screen and (max-width: 1200px) {
     .wrapper-content .wrapper-space {
         margin-right: 0;
