--- a/css/all-ie-only.css
+++ b/css/all-ie-only.css
@@ -1,8 +1,1 @@
-.bg-fixed {
-  background-attachment: scroll; }
-
-.bg-fixed {
-    background-attachment: scroll;
-}
-
-/*# sourceMappingURL=all-ie-only.css.map */
+.bg-fixed{background-attachment:scroll}
